# axum

./: Cargo.toml  build.rs
proto/: payments.proto
src/: auth.rs  error.rs  log.rs  main.rs  model.rs  server.rs
src/protobuf/: client.rs
src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
tests/: quick_dev.rs
